Mise en Place de la Connexion,Déconnexion, qui intéragit avec une base de donnée et une fois connecté affichage d'un lien permettant de créer un post . Et une fois Déconnexion faite, ce lien sera non visible étant donné que vous ne serez pas connecté

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,7 +20,9 @@
                 <li> <a style="text-decoration:none"; href="{{ path('Accueil')}}">Aeroclub</a> </li>
                 <li> <a style="text-decoration:none"; href="{{ path('RegistrationFormType')}}">S'Inscrire</a></li>
                 <li> <a style="text-decoration:none"; href="{{ path('app_login')}}">Se Connecter</a></li>
-            
+                <li> <a style="text-decoration:none"; href="{{ path('app_liste_categorie')}}">Liste des Categories</a></li>
+                <li> <a style="text-decoration:none"; href="{{ path('app_liste_article')}}">Liste des Articles</a></li>
+
                 {% if app.user %}
                     <div class="mb-3">
                         <a href="{{ path('app_logout') }}">Déconnexion</a>
