Ajout des onglets Liste de Catégorie et Liste d'Article

--- a/templates/article/list.html.twig
+++ b/templates/article/list.html.twig
@@ -8,8 +8,8 @@
 <body>
     <h1>Liste des Articles</h1>
     <ul>
-        {% for article in articles %}
-            <li>{{ article.title }}</li>
+        {% for articles in articles %}
+            <li>{{ articles.title }}</li>
         {% endfor %}
     </ul>
 </body>
