--- a/templates/style.css
+++ b/templates/style.css
@@ -2,5 +2,8 @@
     display: flex;
     font-size: 16px;
     color: red;
-    flex-direction: row; justify-content: space-around;
+    flex-direction: row; 
 }
+
+
+
