--- a/templates/style.css
+++ b/templates/style.css
@@ -7,3 +7,23 @@
 
 
 
+html, body {
+    box-sizing: border-box;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+  }
+
+
+  footer{
+    position:fixed;
+    left:0px;
+    bottom:0px;
+    height:30px;
+    width:100%;
+    margin: 0;
+  }
+
+
+
+ 
