Ajout du bouton Burger regroupant les onglets,mise en place des Medias Queries pour le format Tablette et Mobile , ajout d'un type de caractère ainsi que du paragraphe de présentation du blog

--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -1,6 +1,18 @@
 {% extends 'base.html.twig' %}
 {% block title %}Hello AccueilController!{% endblock %}
 {% block body %}
-<h1> TEST </h1>
+
+<div style="width: 100%; justify-content:center;display: flex;">
+<img src="uploads\images\avionpose.jpeg" 
+     style="display: flex; width: 50%; flex-direction:center; justify-content:center;">
+</div>
+
+<h2 style=" font-family: Oswald; display: flex; flex-direction: row; justify-content: center; text-align: center;">
+    Bienvenue sur le blog de l'Aéroclub, créé par moi-même, <br> Al karshi Abdullrahman, passionné d'aviation et développeur web. <br> 
+    J'ai conçu cet espace pour partager notre amour du vol et offrir un lieu de discussion virtuel pour tous les membres de notre aéroclub. <br> 
+    Ici, vous trouverez des articles sur des discussions, des conseils de pilotage. <br> 
+    Le blog propose également un forum de discussion. <br> 
+    Rejoignez-nous et découvrez les cieux avec notre blog, où chaque vol est une nouvelle aventure.
+</h2>
 
 {% endblock %}
