--- a/templates/style.css
+++ b/templates/style.css
@@ -7,23 +7,57 @@
 
 
 
-html, body {
-    box-sizing: border-box;
-    height: 100%;
-    padding: 0;
-    margin: 0;
+html,body {
+  height: 100%;
+  margin: 0 auto;
+}
+
+
+footer{
+  position:fixed;
+  left:0px;
+  bottom:0px;
+  height:30px;
+  width:100%;
+}
+
+
+
+
+@media all and (max-width: 768px) {               
+  .nav-links {
+      display: none;
+      flex-direction: column;
+      width: 100%;
+      padding: 0;
   }
 
-
-  footer{
-    position:fixed;
-    left:0px;
-    bottom:0px;
-    height:30px;
-    width:100%;
-    margin: 0;
+  .hamburger {
+      display: block;
   }
 
+  .menu-toggle:checked + .hamburger + .nav-links {
+      display: flex;
+  }
+
+  .nav-links li {
+      width: 100%;
+      text-align: center;
+      margin: 10px 0;
+  }
+
+  .nav-links li a {
+      text-decoration: none;
+      width: 100%;
+      display: block;
+  }
+}
 
 
- 
+
+
+
+
+
+
+
