--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -9,7 +9,7 @@
 
 <h2 style=" font-family: Oswald; display: flex; flex-direction: row; justify-content: center; text-align: center;">
     Bienvenue sur le blog de l'Aéroclub, créé par moi-même, <br> Al karshi Abdullrahman, passionné d'aviation et développeur web. <br> 
-    J'ai conçu cet espace pour partager notre amour du vol et offrir un lieu de discussion virtuel pour tous les membres de notre aéroclub. <br> 
+    J'ai conçu cet espace pour partager notre passion du vol et offrir un lieu de discussion virtuel pour tous les membres de notre aéroclub. <br> 
     Ici, vous trouverez des articles sur des discussions, des conseils de pilotage. <br> 
     Le blog propose également un forum de discussion. <br> 
     Rejoignez-nous et découvrez les cieux avec notre blog, où chaque vol est une nouvelle aventure.
