Ajout de l'onglet suppression du compte quand l'utilisateur est connécté ce qui va permettre de supprimer son compte et cela va directement le redirigé vers la page d'accueil.

--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -1,5 +1,11 @@
 {% extends 'base.html.twig' %}
-{% block title %}Hello AccueilController!{% endblock %}
+
+
+
+{% block title %}Page d'Accueil{% endblock %}
+
+
+
 {% block body %}
 
 <div style="width: 100%; justify-content:center;display: flex;">
