--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,11 +2,20 @@
 <html>
 <head>
     <meta charset="UTF-8">
+
+    
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+<!--
+    <meta name="descriptiongoogle" content="Blog pour les passionnés de l'aviation">
+    <meta name="keywords" content="AeroClubBlog"
+-->
+    
     <title>{% block title %}Welcome!{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
+
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
     <script src="https://kit.fontawesome.com/b04d3e51a0.js" crossorigin="anonymous"></script>
     {% block stylesheets %}
@@ -188,6 +197,7 @@
             {% if not app.user %}
                 <li><a href="{{ path('RegistrationFormType') }}" style="text-decoration: none;">S'Inscrire</a></li>
                 <li><a href="{{ path('app_login') }}" style="text-decoration: none;">Se Connecter</a></li>
+                <li><a href="{{ path('app_forgot_password_request') }}" style="text-decoration: none;">Mot de Passe oublié</a></li>
             {% else %}
             <li>
                 <a href="#" style="text-decoration: none;">Ajout</a>
@@ -200,6 +210,7 @@
                 <li><a href="{{ path('app_mes_categories') }}" style="text-decoration: none;">Mes Categories</a></li>
                 <li><a href="{{ path('app_mes_articles') }}" style="text-decoration: none;">Mes Articles</a></li>
                 <li><a href="{{ path('app_creer_un_post') }}" style="text-decoration: none;">Lancer un Post</a></li>
+                <li><a href="{{ path('app_user_delete') }}" style="text-decoration: none;">Supprimer mon Compte</a></li>
             {% endif %}
         </ul>
     </nav>
