--- a/templates/reset_password/email.html.twig
+++ b/templates/reset_password/email.html.twig
@@ -1,13 +1,13 @@
 {# templates/reset_password/email.html.twig #}
 
-<h1>Hi!</h1>
+<h1>Bonjour</h1>
 
-<p>To reset your password, please visit the following link</p>
+<p>Pour modifier ton mot de Passe, clique sur ce lien.</p>
 
 <a href="{{ url('app_reset_password', {token: resetToken.token}) }}">{{ url('app_reset_password', {token: resetToken.token}) }}</a>
 
 
-<p>Cheers!</p>
+<p>Merci !</p>
 
 
 
