--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -7,17 +7,16 @@
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
     <!-- page permet de remettre à jour le MDP dans reset-password-->
-    <h1>Reset your password</h1>
+    <h1>Modifier ton Mot de Passe</h1>
 
     {{ form_start(requestForm) }}
         {{ form_row(requestForm.email) }}
         <div>
             <small>
-                Enregistrer votre adresse mail , and we will send you a
-                link to reset your password.
+                Enregistrer votre adresse mail et nous allons vous envoyez un lien afin de modifier votre mot de passe.
             </small>
         </div>
 
-        <button class="btn btn-primary">Send password reset email</button>
+        <button class="btn btn-primary">Valider</button>
     {{ form_end(requestForm) }}
 {% endblock %}
