Ajout des renforcement de sécurités comprenant les 12 caractères minimum (1 Majuscule,minuscule,1 spéciale et 1 chiffre) et de l'ajout de la sécurité concernant les attaques par force brute

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -209,6 +209,7 @@
                 <li><a href="{{ path('app_logout') }}" style="text-decoration: none;">Déconnexion</a></li>
                 <li><a href="{{ path('app_mes_categories') }}" style="text-decoration: none;">Mes Categories</a></li>
                 <li><a href="{{ path('app_mes_articles') }}" style="text-decoration: none;">Mes Articles</a></li>
+                <li><a href="{{ path('app_mes_posts') }}" style="text-decoration: none;">Mes Posts</a></li>
                 <li><a href="{{ path('app_creer_un_post') }}" style="text-decoration: none;">Lancer un Post</a></li>
                 <li><a href="{{ path('app_user_delete') }}" style="text-decoration: none;">Supprimer mon Compte</a></li>
             {% endif %}
