--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -8,7 +8,7 @@
     {% endfor %}
 
     <h1>S'Inscrire</h1>
-    <p style="color: red;"> * le champ Mot de Passe doit contenir au moins 6 caractères</p>
+    <p style="color: red;"> * Le champ Mot de Passe doit contenir au moins <strong>12 caractères </strong>avec<strong> 1 lettre Majuscule, 1 minuscule,1 caractère spéciale et un 1 Chiffre </strong> </p>
 
     {{ form_errors(registrationForm) }}
 
